more changes to fix the contrast issue

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -42,12 +42,14 @@ header img {
     margin-left: auto;
     justify-content: flex-end;
 }
-a:link {
-    color: var(--accent2-color);
+nav a {
+    color: white;
 }
-a:visited {
-    color: var(--accent2-color);
+nav a:hover {
+    text-decoration: underline;
+    color: #ffffcc;
 }
+
 .navigation li {
     flex: 1 1 auto;
     flex-wrap: nowrap;
@@ -56,7 +58,7 @@ a:visited {
     padding: 5px;
     text-align: center;
     border: 2px solid #000009;
-    background-color: var(--secondary-color);
+    background-color: #d9a8a8;
     white-space: nowrap;
 }
 
